@startuml
'https://plantuml.com/class-diagram

package UI {
class DataFromLegacySystemUI{
-sortedListUI
+run()
+printSortedArray()
}
}

package Controller {
class App{
+getSortingAlgorithm()
}

class DataFromLegacySystemController{
+getSortingAlgorithm()
+getSNSUserList()
+getVaccines()
+readFile()
+updateFile()
+setList()
+insertionSortAscending()
+insertionSortDescending()
+getListToSort()
+heapAscending()
+heapDescending()
+getAlgorithm()
+chooseCriteriaToSort()
+sortListWithAlgo()
-sortedList
}
}

package Domain {
class Company{
+getSnsUsersStore()
+getVaccinesList()
}
}

package Stores {
class SNSUserStore{
+getSnsUserList()
}
}

package Miscellaneous{
class ReadLegacyDataFile{
+readFile()
+validateFileLegacye()
+isValidDate()
+updateLegacyFile()
+getSNSUserList()
+getVaccineList()
+findPosOfSNSUserumber()
+findPosOfVax()
+checksDuplicatesNumber()
+setList()
+insertionSortDescending()
+insertionSortAscending()
+heapSortAscending()
+heapSortDescending()
-legacyDataList
-listToSort
-updatedList
-snsUsersList
-vaccineList
}
}

DataFromLegacySystemUI ..> DataFromLegacySystemController

DataFromLegacySystemController ..> App

DataFromLegacySystemController ..> ReadLegacyDataFile

ReadLegacyDataFile ..> Company

Company ..> SNSUserStore



@enduml